--- a/Website/scss/_base.scss
+++ b/Website/scss/_base.scss
@@ -1,7 +1,4 @@
 @import url('https://fonts.googleapis.com/css?family=Nunito');
 
-html {
-    height: 100%;
-}
-
 $default-purple: #7b4ba8;
+$beach-blue: #B4A0E5;
