--- a/Website/scss/universe.scss
+++ b/Website/scss/universe.scss
@@ -1,10 +1,11 @@
 @import 'base';
 
-html {
+html, body {
   margin: 0;
   padding: 0;
-  height:100%;
   width:100%;
+  height: 100%;
+  background-color : #fbfbfb; 
 }
 
 
