--- a/Website/views/header.jade
+++ b/Website/views/header.jade
@@ -11,25 +11,7 @@ html
 		script(src="/public/javascripts/bootstrap.min.js")
 		script(src="/public/javascripts/universe.js")
 
-
-	body(style="background-color : #fbfbfb; min-height : 100%;")
-		div#body
-			div.u-nav
-				div.u-nav__link.u-nav__link-brand VRUniverse
-				div.u-nav__link.u-nav__link-toggle
-					div.fa.fa-bars
-				nav.u-nav__items.u-nav__items--right
-					div.u-nav__link
-						a(href="/user/signup").hvr-underline-from-center Sign Up
-					div.u-nav__link
-						a(href="/about").hvr-underline-from-center About
-					div.u-nav__link
-						a(href="/projects").hvr-underline-from-center Projects
-					div.u-nav__link
-						a(href="/download").hvr-underline-from-center Download
-					div.u-nav__link
-						a(href="/upload").hvr-underline-from-center Upload
-
+	body
 		block content
 
 		include footer
