--- a/Website/views/footer.jade
+++ b/Website/views/footer.jade
@@ -1,10 +1,10 @@
 
 block footer
-	footer
-		div.container
-			span Built by the VRUniverse team @ 
-			a(href="vrclub.ucsd.edu").link UCSD VR Club
+	footer.footer
+		div.footer__container
+			span.footer__text Built by the VRUniverse team @ 
+				a(href="http://vrclub.ucsd.edu").footer__text-link UCSD VR Club
 
-			span.github 
-				i.fa.fa-github.fa-lg
-					a(href="https://github.com/UCSDVR/VRUniverse" style="font-family : Nunito; font-size : 18px;").link   View our code on Github
+				span.footer__text-github 
+					i.fa.fa-github.fa-lg &nbsp; &nbsp;
+					a(href="https://github.com/UCSDVR/VRUniverse").footer__text-link View our code on Github
