--- a/Website/views/includes/nav.jade
+++ b/Website/views/includes/nav.jade
@@ -6,7 +6,7 @@ div.u-nav
 		div.u-nav__link
 			a(href="/user/signup").hvr-underline-from-center Sign Up
 		div.u-nav__link
-			a(href="/about").hvr-underline-from-center About
+			a(href="/#about").hvr-underline-from-center About
 		div.u-nav__link
 			a(href="/projects").hvr-underline-from-center Projects
 		div.u-nav__link
