--- a/Website/views/user/signup.jade
+++ b/Website/views/user/signup.jade
@@ -1,5 +1,6 @@
 extends ../header
 block content
+    include ../includes/nav.jade
     div.row
         div.col-md-4.col-md-offset-4
             h1 Sign Up
