--- a/Website/views/about.jade
+++ b/Website/views/about.jade
@@ -18,10 +18,25 @@ div.about.container-fluid(id="about")
 
 				p A video of the current experience can be found here: 
 				br
-				iframe( width="560" height="315" src="https://www.youtube.com/embed/RACA0ifu_5g" frameborder="0" allowfullscreen).center-block.about__video
+				iframe(width="560" height="315" src="https://www.youtube.com/embed/eQo5MkgLEhk?rel=0&loop=1&playlist=eQo5MkgLEhk&autoplay=1&mute=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen).center-block.about__video
 				br
 				p Below are the list of project members throughout the development of VRUniverse:
 
+				div.container-fluid.about__quarter
+					div.about__quarter-label Winter 2018
+					div.row
+						div.col-md-6.about__quarter-members
+							li Kristin Agcaoili (Project Lead)
+							li Prasanth Abraham (Unity Programmer, Scene Design)
+							li Xinyi He (Unity Programmer, Scene Design)
+							li Eunice Chan (User Experience Designer)
+							li Dana Kimball (Unity Programmer)
+							li Henry Narabe (Unity Programmer)
+							li Subhankar Panda (Web Lead)
+							li Rui Ren (Web Developer)
+							li Xin Li (Unity Programmer)
+						div.col-md-6
+							img(src="/public/images/wi18.png" style="max-width : 100%").about__quarter-img
 				div.container-fluid.about__quarter
 					div.about__quarter-label Fall 2017
 					div.row
