--- a/Website/views/includes/nav.jade
+++ b/Website/views/includes/nav.jade
@@ -1,5 +1,6 @@
 div.u-nav
-	div.u-nav__link.u-nav__link-brand VRUniverse
+	div.u-nav__link.u-nav__link-brand 
+		a(href="/") VRUniverse
 	div.u-nav__link.u-nav__link-toggle
 		div.fa.fa-bars
 	nav.u-nav__items.u-nav__items--right
