--- a/Website/views/projects.jade
+++ b/Website/views/projects.jade
@@ -2,32 +2,40 @@ extends header
 include ./mixins/filter-mixin.jade
 
 block content
+	include ./includes/nav.jade
+
 	style.
-		#navbar {
-			margin-bottom : 0px;
-			position : fixed;
-			width : 100%;
-			z-index : 100;
+		.footer {
+			position : absolute;
+			bottom: 0;
+			height: auto;
 		}
 
-		footer {
-			position : fixed;
+		.footer__text {
+			margin-top: 0;
+		}
+
+		.u-nav {
+			position: fixed;
+			left: 0;
+			top: 0;
+			width: 100%;
+			z-index: 100;
 		}
 
 	-var searchTags = JSON.parse(tags);
-	div.sidenav-container
-		div.sidenav
-			h2.text-center Filter
-			div.sidenav-params
-				form(method="get" action="/filter/")
-					div.sidenav-params-container
-						-for (var tag in searchTags)
-							div
-								input(type="checkbox", name="#{searchTags[tag].tag}" class="download-checkbox", value="true" id="#{searchTags[tag].tag}")
-								label(for="#{searchTags[tag].tag}") #{searchTags[tag].tag}
-					button(type="submit" id="filterbutton").center-block.btn.btn-lg Search
+	div.projects__sidenav
+		h1.projects__sidenav-title.text-center Filter
+		div.projects__sidenav__opts
+			form(method="get" action="/filter/")
+				div.projects__sidenav__opts-container
+					-for (var tag in searchTags)
+						div
+							input(type="checkbox", name="#{searchTags[tag].tag}" class="download-checkbox", value="true" id="#{searchTags[tag].tag}")
+							label(for="#{searchTags[tag].tag}").projects__sidenav__opts-label #{searchTags[tag].tag}
+				button(type="submit" id="filterbutton").center-block.btn.btn-lg.projects__sidenav__opts-btn Search
 
-	div.download-content
+	div.projects__content
 
 		-if (tagArr == null)
 			h2.text-center All Projects in VRUniverse
