--- a/Website/views/mixins/filter-mixin.jade
+++ b/Website/views/mixins/filter-mixin.jade
@@ -22,6 +22,6 @@ mixin filter-mixin(data)
 										- data.tags = data.tags.split(",");
 										-data.tags.push("" + data.year);
 											- for (var key in data.tags)
-												a.projects__elem-tag(href="/filter/?#{data.tags[key]}=true")
+												a.projects__elem-tag(href="/filter/#{platform}/?#{data.tags[key]}=true")
 													span #{data.tags[key]}
 										
