--- a/Website/views/download.jade
+++ b/Website/views/download.jade
@@ -13,23 +13,15 @@ block content
 	#exTab1.container
 		ul.nav.nav-pills
 			li.active
-				a(href='#1a', data-toggle='tab') Overview
+				a(href='#1a', data-toggle='tab') Vive
 			li
-				a(href='#2a', data-toggle='tab') Using nav-pills
-			li
-				a(href='#3a', data-toggle='tab') Applying clearfix
-			li
-				a(href='#4a', data-toggle='tab') Background color
+				a(href='#2a', data-toggle='tab') Oculus
 			.tab-content.clearfix
 				#1a.tab-pane.active
-					h3 Content's background color is the same for the tab
+					h3 Download HTC Vive projects.
+					div.text-center
+						a(class="btn btn-default" href="/download/vive") Download!
 				#2a.tab-pane
-					h3
-						| We use the class nav-pills instead of nav-tabs which automatically creates a background color for the tab
-				#3a.tab-pane
-					h3
-						| We applied clearfix to the tab-content to rid of the gap between the tab and the content
-				#4a.tab-pane
-					h3 We use css to change the background color of the content to be equal to the tab
-
-
+					h3 Download Oculus Rift projects.
+					div.text-center
+						a(class="btn btn-default" href="/download/oculus") Download!
