Fixed footer, added landing page description, added members, fixed oculus and vive project switch

--- a/Website/views/about.jade
+++ b/Website/views/about.jade
@@ -23,18 +23,32 @@ div.about.container-fluid(id="about")
 				p Below are the list of project members throughout the development of VRUniverse:
 
 				div.container-fluid.about__quarter
+					div.about__quarter-label Spring 2018
+					div.row
+						div.col-md-6.about__quarter-members
+							li Kristin Agcaoili (Project Lead)
+							li Prasanth Abraham (Unity Programmer)
+							li Eunice Chan (User Experience Designer)
+							li Xinyi He (Unity Programmer, Web Developer)
+							li Dana Kimball (Unity Programmer)
+							li Xin Li (Unity Programmer)
+							li Subhankar Panda (Web Lead)
+							li Rui Ren (Unity Programmer, Web Developer)
+						div.col-md-6
+							img(src="/public/images/wi18.png" style="max-width : 100%").about__quarter-img
+				div.container-fluid.about__quarter
 					div.about__quarter-label Winter 2018
 					div.row
 						div.col-md-6.about__quarter-members
 							li Kristin Agcaoili (Project Lead)
 							li Prasanth Abraham (Unity Programmer, Scene Design)
-							li Xinyi He (Unity Programmer, Scene Design)
 							li Eunice Chan (User Experience Designer)
+							li Xinyi He (Unity Programmer, Scene Design)
 							li Dana Kimball (Unity Programmer)
+							li Xin Li (Unity Programmer)
 							li Henry Narabe (Unity Programmer)
 							li Subhankar Panda (Web Lead)
 							li Rui Ren (Web Developer)
-							li Xin Li (Unity Programmer)
 						div.col-md-6
 							img(src="/public/images/wi18.png" style="max-width : 100%").about__quarter-img
 				div.container-fluid.about__quarter
@@ -57,10 +71,10 @@ div.about.container-fluid(id="about")
 						div.col-md-6.about__quarter-members
 							li Kristin Agcaoili (Project Lead)
 							li Prasanth Abraham (Unity Programmer, Scene Design)
-							li Michelle Viado (Scene Design, 3D Modeling)
-							li Subhankar Panda (Unity Programmer)
-							li Cortez Page (Unity Programmer)
 							li Dana Kimball (Unity Programmer)
+							li Cortez Page (Unity Programmer)
+							li Subhankar Panda (Unity Programmer)
+							li Michelle Viado (Scene Design, 3D Modeling)
 						div.col-md-6
 							img(src="/public/images/Image_SP17.png" style="max-width : 100%").about__quarter-img
 				div.container-fluid.about__quarter
