--- a/Website/views/footer.jade
+++ b/Website/views/footer.jade
@@ -3,8 +3,8 @@ block footer
 	footer.footer
 		div.footer__container
 			span.footer__text Built by the VRUniverse team @ 
-				a(href="http://vrclub.ucsd.edu").footer__text-link UCSD VR Club
+				a(href="http://vrclub.ucsd.edu").footer__text-link TritonXR 
 
 				span.footer__text-github 
 					i.fa.fa-github.fa-lg &nbsp; &nbsp;
-					a(href="https://github.com/UCSDVR/VRUniverse").footer__text-link View our code on Github
+					a(href="https://github.com/TritonXR/VRUniverse").footer__text-link View our code on Github
