--- a/Website/views/index.jade
+++ b/Website/views/index.jade
@@ -14,7 +14,7 @@ block content
 			div.col-md-6.hero__index-content
 				div.container-fluid
 					div VR Universe
-					div.hero__index-content_text Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tempus semper congue. Mauris efficitur orci odio, vitae laoreet nulla ornare a. Phasellus finibus sapien arcu, quis aliquam odio congue non. Cras rhoncus quam ut orci vulputate, ac placerat sapien ultrices. Donec quis euismod justo, quis lobortis arcu. Cras tristique, nisl et vehicula mollis, arcu justo tincidunt purus, id accumsan sem nisi eu urna. Duis ut est nec risus facilisis lacinia suscipit congue felis.
+					div.hero__index-content_text VRUniverse is a project dedicated to creating a virtual reality platform to display projects developed by actual VR Club members. As members come and go, this universe will continue to showcase a portfolio of student creations ranging from beginner to experienced and with majors of all kinds.
 			div.col-md-5.hero__container
 				img(src='/public/images/VRUniverseLogo.png').hero__container-img
 	
