Added Spring 2018 picture to about page

--- a/Website/views/about.jade
+++ b/Website/views/about.jade
@@ -35,7 +35,7 @@ div.about.container-fluid(id="about")
 							li Subhankar Panda (Web Lead)
 							li Rui Ren (Unity Programmer, Web Developer)
 						div.col-md-6
-							img(src="/public/images/wi18.png" style="max-width : 100%").about__quarter-img
+							img(src="/public/images/sp18.png" style="max-width : 100%").about__quarter-img
 				div.container-fluid.about__quarter
 					div.about__quarter-label Winter 2018
 					div.row
