Removed the brackets and u apostrophes on tags

--- a/Website/views/mixins/filter-mixin.jade
+++ b/Website/views/mixins/filter-mixin.jade
@@ -19,7 +19,14 @@ mixin filter-mixin(data)
 								div(class="row projects__elem-data__row")
 									div.projects__elem-data__row-title Tags :
 
+										- data.tags = data.tags.replace(new RegExp("'", 'g'), '');
+										- data.tags = data.tags.substring(1, data.tags.length - 1);
 										- data.tags = data.tags.split(",");
+
+										- for (let i = 0; i < data.tags.length; i++) {
+												- data.tags[i] = data.tags[i].trim().substring(1, data.tags[i].length);
+										- }
+										
 										-data.tags.push("" + data.year);
 											- for (var key in data.tags)
 												a.projects__elem-tag(href="/filter/#{platform}/?#{data.tags[key]}=true")
