--- a/Website/views/user/signin.jade
+++ b/Website/views/user/signin.jade
@@ -3,6 +3,8 @@ block content
     div.row
         div.col-md-4.col-md-offset-4
             h1 Login
+                a(href="https://github.com/login/oauth/authorize?client_id=#{process.env['GITHUB_CLIENT_ID']}&read:org")
+
             //-
                 if hasErrors
                     div.alert.alert-danger
@@ -17,4 +19,3 @@ block content
                         input(type="password" id="password" name="password" class="form-control")
                     input(type="hidden" name="_csrf" value=csrfToken)
                     button(type="submit" class="btn btn-default") Sign in
-                a(href="https://github.com/login/oauth/authorize?client_id=552a4d5399f4c47e15de&read:org")
