Ignored data folder, changed year selection to input, and added year validation

--- a/Website/views/upload.jade
+++ b/Website/views/upload.jade
@@ -13,10 +13,7 @@ block content
 						div.row
 							div.col-xs-6
 								label.form-label Year :
-								select(class="form-control" id="year" name="year")
-									option 2016
-									option 2017
-									option 2018
+								input(type="text" class="form-control" id="year" name="year")
 							div.col-xs-6
 								label.form-label Contributor Email :
 								input(type="email" class="form-control" id="name" name="email")
